--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-session-knex": "^3.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "helmet": "^5.0.2",
-    "knex": "^2.0.0",
-    "sqlite3": "^5.0.8"
+    "knex": "^2.4.2",
+    "sqlite3": "^5.1.6"
   },
   "repository": {
     "type": "git",
